force-app/main/default/objects/Human__c/Human__c.object-meta.xml
<CustomObject>
    <description>Leveraging Human to behave closer to User due to environmental restrictions.</description>
    <label>Human</label>
    <nameField>
        <displayFormat>HU-{000000}</displayFormat>
        <label>Human ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Humans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>