force-app/main/default/objects/Human__c/fields/Fullname__c.field-meta.xml
<CustomField>
    <fullName>Fullname__c</fullName>
    <formula>FirstName__c + &apos; &apos; +  IF(NOT(ISNULL(MiddleName__c)) , MiddleName__c + &apos; &apos; + LastName__c ,LastName__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fullname</label>
    <type>Text</type>
</CustomField>