force-app/main/default/objects/Human__c/fields/MiddleName__c.field-meta.xml
<CustomField>
    <fullName>MiddleName__c</fullName>
    <label>Middle Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>