force-app/main/default/objects/Human__c/recordTypes/Player.recordType-meta.xml
<RecordType>
    <fullName>Player</fullName>
    <active>true</active>
    <label>Player</label>
</RecordType>