force-app/main/default/objects/Human__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Fullname__c</columns>
    <columns>Birthday__c</columns>
    <columns>Nationality__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>